--- a/index.html
+++ b/index.html
@@ -61,6 +61,64 @@
     
             </div>
         </div>
+    </div>
+
+    <div class="wrapper-content content">
+        <aside class="profile">
+            <img src="/src/avatar.png" class="avatar" alt="avatar">
+            <h1>Marcos Martins</h1>
+            <span>@martinez</span>
+            <p>bio</p>
+            <ul class="list">
+                <li>
+                    <img src="./src/place.svg" alt="place">São Paulo, Brasil
+                </li>
+                <li>
+                    <img src="./src/url.svg" alt="url.svg">exibit.be
+                </li>
+                <li>
+                    <img src="./src/joined.svg" alt="joined.svg">Joined June 2007
+                </li>
+                <li>
+                    <img src="./src/born.svg" alt="born.svg"> Born the 28th of January 1996 
+                </li>
+            </ul>
+
+            <div class="widget followers">
+                <strong><img src="/src/followers.svg" alt="">  73 followers that you know</strong>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+
+            <div class="widget images">
+                <strong><img src="/src/images.svg   " alt=""> 266 Photos and videos </strong>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+
+        </aside>
+        <section class="timeline">
+            timeline
+        </section>
+        <aside class="widgets">
+            widgets
+        </aside>
 
     </div>
 </body>
