fixed avatar img

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <div class="wrapper-content content">
         <aside class="profile">
-            <img src="/src/avatar.png" class="avatar" alt="avatar">
+            <img src="./src/avatar.png" class="avatar" alt="avatar">
             <h1>Marcos Martins</h1>
             <span>@martinez</span>
             <p>bio</p>
@@ -101,7 +101,7 @@
             </div>
 
             <div class="widget images">
-                <strong><img src="/src/images.svg   " alt=""> 266 Photos and videos </strong>
+                <strong><img src="/src/images.svg" alt=""> 266 Photos and videos </strong>
                 <ul>
                     <li></li>
                     <li></li>
